# triptip_backend

./: .env_sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  deploy-compose.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: cd.yml  ci.yml  coverage.yml  push.yml  showsmoke.yml  telegram.yml
nginx/: Dockerfile.nginx  nginx.conf
src/: main.py
src/admin/: auth.py  locations.py  routes.py  trips.py  users.py  utils.py
src/auth/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
src/dao/: base.py
src/database/: database.py  models.py
src/file_service/: service.py
src/migrations/: env.py
src/migrations/versions/: 1ad583c6d727_initial_migration.py  2e83e58b79a7_20240507193443.py  4148289b692b_20240725131128.py  70d03c7f4462_20240622132611.py  852568712470_20240725130847.py  868d5a60fdd4_20240603230305.py  8ebb55d31f46_20240731144352.py  b8facb845b7f_20240813133934.py  e864760649c8_20240627111848.py  fb40e8d83b0a_20240801122150.py
src/settings/: config.py  constants.py  enums.py
src/trips/: dao.py  models.py  router.py  schemas.py  services.py
src/users/: dao.py  models.py  router.py  schemas.py  service.py
src/utils/: dependencies.py  exceptions.py  utils.py
tests/: conftest.py  test_auth.py  test_file_service.py  test_trips.py  test_users.py
tests/factories/: aws_config.py  base_factory.py  fixtures.py  trips_factories.py  user_factories.py
